# seal

./: .edict.toml  AGENTS.md  CHANGELOG.md  Cargo.toml  Justfile  README.md
.bones/: .gitattributes
.bones/events/: 2026-02.manifest  2026-03.events  2026-03.manifest  2026-04.events
.github/workflows/: ci.yml  release.yml  snitch.yml
crates/crit-tui/src/: update.rs
crates/crit-tui/src/diff/: parse.rs
crates/seal-cli/: Cargo.toml
crates/seal-cli/src/: main.rs  telemetry.rs
crates/seal-cli/src/cli/: mod.rs
crates/seal-cli/src/cli/commands/: agents.rs  comments.rs  doctor.rs  helpers.rs  init.rs  migrate.rs  mod.rs  remote_sync.rs  reviews.rs  sarif.rs  status.rs  threads.rs
crates/seal-cli/src/output/: mod.rs
crates/seal-core/: Cargo.toml  README.md
crates/seal-core/src/: lib.rs  sealignore.rs  version.rs
crates/seal-core/src/core/: comments.rs  errors.rs  inbox.rs  mod.rs  reviews.rs  sync.rs  threads.rs
crates/seal-core/src/events/: identity.rs  ids.rs  mod.rs
crates/seal-core/src/jj/: context.rs  drift.rs  mod.rs
crates/seal-core/src/log/: mod.rs
crates/seal-core/src/projection/: mod.rs  query.rs
crates/seal-core/src/scm/: git.rs  mod.rs
crates/seal-tui/: Cargo.toml  README.md
crates/seal-tui/src/: command.rs  core_client.rs  db.rs  input.rs  lib.rs  markdown.rs  model.rs  syntax.rs  update.rs
crates/seal-tui/src/diff/: parse.rs
crates/seal-tui/src/render_backend/: ftui_compat.rs
crates/seal-tui/src/view/: components.rs  review_detail.rs
crates/seal-tui/src/view/diff/: mod.rs
docs/: releasing.md
src/: main.rs
