[workspace]
members = [
    "crates/seal-core",
    "crates/seal-cli",
    "crates/seal-tui",
]
resolver = "2"

[workspace.package]
version = "0.26.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.43", features = ["serde"] }
fs2 = "0.4.3"
getrandom = "0.3"
ignore = "0.4"
rusqlite = { version = "0.38.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
terseid = "0.1"
thiserror = "2.0.18"
tracing = "0.1"
which = "8.0.0"

# CLI-specific
clap = { version = "4.5.54", features = ["derive"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
# TUI-specific (ftui-based)
ftui-core = { version = "0.2.1", features = ["crossterm"] }
ftui-render = "0.2.1"
ftui-style = "0.2.1"
palette = "0.7.6"
syntect = { version = "5.3", default-features = false, features = ["default-fancy"] }

# OTEL dependencies (optional at crate level, not workspace level)
opentelemetry = "0.31"
opentelemetry_sdk = { version = "0.31", features = ["trace", "logs"] }
opentelemetry-otlp = { version = "0.31", default-features = false, features = ["trace", "logs", "http-proto", "reqwest-blocking-client"] }
opentelemetry-appender-tracing = "0.31"
tracing-opentelemetry = "0.32"

# Dev
tempfile = "3.24.0"

# Internal
seal-core = { path = "crates/seal-core" }

[workspace.lints.clippy]
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
unwrap_used = "deny"
suspicious = { level = "warn", priority = -2 }
complexity = { level = "warn", priority = -2 }
perf = { level = "warn", priority = -2 }
style = { level = "warn", priority = -2 }
