[package]
name = "seal-core"
description = "Core domain logic for seal — events, storage, projection, SCM"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = []
clap = ["dep:clap"]

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap = { workspace = true, optional = true }
fs2.workspace = true
getrandom.workspace = true
ignore.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
terseid.workspace = true
thiserror.workspace = true
tracing.workspace = true
which.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
